--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-03</title>
+    <title>goit-markup-hw-04</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
         integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
         crossorigin="anonymous" />
@@ -18,14 +18,17 @@
     <nav class="nav-item">
         <a href="#" class="logo link" lang="en"><span class="web">Web</span>Studio</a>
         <ul class="nav-list">
-            <li class="link list nav-list-item"><a href="#" class="active ">Студия</a></li>
+            <li class="link list nav-list-item"><a href="#" class="active "></svg>Студия</a></li>
             <li class="link list nav-list-item"><a href="./portfolio.html">Портфолио</a></li>
             <li class="link list nav-list-item"><a href="#">Контакты</a></li>
         </ul>
     </nav>
         <ul class="nav-list address">
-            <li class="nav-list-address link list"><a href="mailto:info@example.com" class="header-contact">info@devstudio.com</a></li>
-            <li class="nav-list-address link list"><a href="tel:+380991111111" class="header-contact">+38 096 111 11 11</a></li>
+            <li class="nav-list-address link list"><a href="mailto:info@example.com" class="header-contact"><svg>
+                <use href="./sprite.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a></li>
+            <li class="nav-list-address link list"><a href="tel:+380991111111" class="header-contact"><svg>
+                <use href="./sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
         </ul>
     </div>
 </header>
@@ -42,18 +45,34 @@
     <div class="container">
         <ul class="advantages-item-list">
         <li class="list advantages-item">
+            <div class="svg-advantages">
+            <svg class="advantages-icon">
+                <use href="./sprite.svg#icon-antenna-1"></use>
+            </svg></div>
             <h3 class="advantages-h3">Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li class="list advantages-item">
+            <div class="svg-advantages">
+            <svg class="advantages-icon">
+                <use href="./sprite.svg#icon-clock-1"></use>
+            </svg></div>
             <h3 class="advantages-h3">Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li class="list advantages-item">
+            <div class="svg-advantages">
+            <svg class="advantages-icon">
+                <use href="./sprite.svg#icon-diagram-1"></use>
+            </svg></div>
             <h3 class="advantages-h3">Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li class="list advantages-item">
+            <div class="svg-advantages">
+            <svg class="advantages-icon">
+                <use href="./sprite.svg#icon-astronaut-1"></use>
+            </svg></div>
             <h3 class="advantages-h3">Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
@@ -78,33 +97,129 @@
             <img src="./img/ИгорьДемьяненко.jpg" alt="Игорь Демьяненко" width="270" height="260">
             <div class="team-list-text">
             <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-</div>
+            <p>Product Designer</p></div>
+            <div class="social-links-team"><ul class="social-links-team-list">
+                <li class="social-link"><a href="#">
+                    <svg>
+                        <use href="./sprite.svg#icon-instagram-2"></use>
+                    </svg>
+                </a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-twitter-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-facebook-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-linkedin-1"></use>
+                </svg></a></li>
+            </ul></div>
+
         </li>
         <li class="team-list-item list">
             <img src="./img/ОльгаРепина.jpg" alt="Ольга Репина" width="270" height="260">
             <div class="team-list-text">
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-</div>
+            <p>Frontend Developer</p></div>
+            <div class="social-links-team"><ul class="social-links-team-list">
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-instagram-2"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-twitter-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-facebook-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-linkedin-1"></use>
+                </svg></a></li>
+            </ul></div>
+
         </li>
         <li class="team-list-item list">
             <img src="./img/НиколайТарасов.jpg" alt="Николай Тарасов" width="270" height="260">
             <div class="team-list-text">
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-</div>
+            <p>Marketing</p></div>
+            <div class="social-links-team"><ul class="social-links-team-list">
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-instagram-2"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-twitter-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-facebook-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-linkedin-1"></use>
+                </svg></a></li>
+            </ul></div>
+
         </li>
         <li class="team-list-item list">
             <img src="./img/МихаилЕрмаков.jpg" alt="Михаил Ермаков" width="270" height="260">
             <div class="team-list-text">
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-            </div>
+            <p>UI Designer</p></div>
+            <div class="social-links-team"><ul class="social-links-team-list">
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-instagram-2"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-twitter-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-facebook-1"></use>
+                </svg></a></li>
+                <li class="social-link"><a href="#"><svg>
+                    <use href="./sprite.svg#icon-linkedin-1"></use>
+                </svg></a></li>
+            </ul></div>
+            
         </li>
     </ul>
 </div>
-    </section>
+</section>
+<section class="clients-section">
+<div class="clients container"><h2>Постоянные клиенты</h2>
+    <ul class="clients-list">
+    <li class="client-list-iteam">
+        <a href="#">
+            <svg>
+                <use href="./sprite.svg#icon-logo-1"></use>
+            </svg>
+        </a>
+    </li>
+    <li class="client-list-iteam">
+        <a href="#">
+            <svg><use href="./sprite.svg#icon-logo-2"></use></svg>
+        </a>
+    </li>
+    <li class="client-list-iteam">
+        <a href="#">
+            <svg><use href="./sprite.svg#icon-logo-3"></use></svg>
+        </a>
+    </li>
+    <li class="client-list-iteam">
+        <a href="#">
+            <svg><use href="./sprite.svg#icon-logo-4"></use></svg>
+        </a>
+    </li>
+    <li class="client-list-iteam">
+        <a href="#">
+            <svg><use href="./sprite.svg#icon-logo-5"></use></svg>
+        </a>
+    </li>
+    <li class="client-list-iteam">
+        <a href="#">
+            <svg><use href="./sprite.svg#icon-logo-6"></use></svg>
+        </a>
+    </li>
+</ul></div>
+</section>
+    
     </main>
     <footer class="footer">
         <div class="container">
