--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-03</title>
+    <title>goit-markup-hw-04</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
         integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
         crossorigin="anonymous" />
@@ -27,8 +27,12 @@
                 </ul>
             </nav>
             <ul class="nav-list address">
-                <li class=" nav-list-address link list" ><a href="mailto:info@example.com" class="header-contact">info@devstudio.com</a></li>
-                <li class=" nav-list-address link list"><a href="tel:+380991111111" class="header-contact">+38 096 111 11 11</a></li>
+                <li class=" nav-list-address link list" ><a href="mailto:info@example.com" class="header-contact"><svg>
+                    <use href="./sprite.svg#icon-envelope"></use>
+                </svg>info@devstudio.com</a></li>
+                <li class=" nav-list-address link list"><a href="tel:+380991111111" class="header-contact"><svg>
+                    <use href="./sprite.svg#icon-smartphone"></use>
+                </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
