--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p></div>
             <div class="social-links-team"><ul class="social-links-team-list">
-                <li class="social-link"><a href="#">
+                <li class="social-link"><a href="https://www.instagram.com/">
                     <svg>
                         <use href="./sprite.svg#icon-instagram-2"></use>
                     </svg>
@@ -122,7 +122,7 @@
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p></div>
             <div class="social-links-team"><ul class="social-links-team-list">
-                <li class="social-link"><a href="#"><svg>
+                <li class="social-link"><a href="https://www.instagram.com/"><svg>
                     <use href="./sprite.svg#icon-instagram-2"></use>
                 </svg></a></li>
                 <li class="social-link"><a href="#"><svg>
@@ -143,7 +143,7 @@
             <h3>Николай Тарасов</h3>
             <p>Marketing</p></div>
             <div class="social-links-team"><ul class="social-links-team-list">
-                <li class="social-link"><a href="#"><svg>
+                <li class="social-link"><a href="https://www.instagram.com/"><svg>
                     <use href="./sprite.svg#icon-instagram-2"></use>
                 </svg></a></li>
                 <li class="social-link"><a href="#"><svg>
@@ -164,7 +164,7 @@
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p></div>
             <div class="social-links-team"><ul class="social-links-team-list">
-                <li class="social-link"><a href="#"><svg>
+                <li class="social-link"><a href="https://www.instagram.com/"><svg>
                     <use href="./sprite.svg#icon-instagram-2"></use>
                 </svg></a></li>
                 <li class="social-link"><a href="#"><svg>
@@ -223,6 +223,7 @@
     </main>
     <footer class="footer">
         <div class="container">
+            <div class="footer-address">
         <a href="#" class="logo link" lang="en"><span class="web">Web</span><span class="studio">Studio</span></a>
         <address class="footer-address">
             <p class="footer-item">г. Киев, пр-т Леси Украинки, 26</p>
@@ -230,7 +231,26 @@
             <li class="footer-item list"><a href="mailto:info@example.com" class="footer-item link">info@example.com</a></li>
             <li class="footer-item list"><a href="tel:+380991111111" class="footer-item link">+38 099 111 11 11</a></li>
             </ul>
-        </address>
+        </address></div>
+        <div class="join">
+            <span>Присойденяйтесь</span>
+            <div class="social-links-footer">
+                <ul class="social-links-footer-list">
+                    <li class="social-link"><a href="https://www.instagram.com/"><svg>
+                                <use href="./sprite.svg#icon-instagram-2"></use>
+                            </svg></a></li>
+                    <li class="social-link"><a href="#"><svg>
+                                <use href="./sprite.svg#icon-twitter-1"></use>
+                            </svg></a></li>
+                    <li class="social-link"><a href="#"><svg>
+                                <use href="./sprite.svg#icon-facebook-1"></use>
+                            </svg></a></li>
+                    <li class="social-link"><a href="#"><svg>
+                                <use href="./sprite.svg#icon-linkedin-1"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
+        </div>
         </div>
     </footer>
 </body>
