--- a/portfolio.html
+++ b/portfolio.html
@@ -134,6 +134,7 @@
         </main>
         <footer class="footer">
             <div class="container">
+                <div class="footer-address">
             <a href="./index.html" class="logo list link" lang="en"><span class="web">Web</span><span class="studio">Studio</span></a>
             <address class="footer-address">
                 <p class="footer-item">г. Киев, пр-т Леси Украинки, 26</p>
@@ -141,7 +142,26 @@
                     <li class="footer-item list link"><a href="mailto:info@example.com" class="footer-item link">info@example.com</a></li>
                     <li class="footer-item list link"><a href="tel:+380991111111" class="footer-item link">+38 099 111 11 11</a></li>
                 </ul>
-            </address>
+            </address></div>
+                <div class="join">
+                    <span>Присойденяйтесь</span>
+                    <div class="social-links-footer">
+                        <ul class="social-links-footer-list">
+                            <li class="social-link"><a href="https://www.instagram.com/"><svg>
+                                        <use href="./sprite.svg#icon-instagram-2"></use>
+                                    </svg></a></li>
+                            <li class="social-link"><a href="#"><svg>
+                                        <use href="./sprite.svg#icon-twitter-1"></use>
+                                    </svg></a></li>
+                            <li class="social-link"><a href="#"><svg>
+                                        <use href="./sprite.svg#icon-facebook-1"></use>
+                                    </svg></a></li>
+                            <li class="social-link"><a href="#"><svg>
+                                        <use href="./sprite.svg#icon-linkedin-1"></use>
+                                    </svg></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
         </body>
