--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="nav-item">
         <a href="#" class="logo link" lang="en"><span class="web">Web</span>Studio</a>
         <ul class="nav-list">
-            <li class="link list nav-list-item"><a href="#" class="active "></svg>Студия</a></li>
+            <li class="link list nav-list-item"><a href="#" class="active ">Студия</a></li>
             <li class="link list nav-list-item"><a href="./portfolio.html">Портфолио</a></li>
             <li class="link list nav-list-item"><a href="#">Контакты</a></li>
         </ul>
