--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li class="nav-list-address link list"><a href="mailto:info@example.com" class="header-contact"><svg>
                 <use href="./sprite.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a></li>
-            <li class="nav-list-address link list"><a href="tel:+380991111111" class="header-contact"><svg>
+            <li class="nav-list-address link list"><a href="tel:+380991111111" class="header-contact"><svg class="svg">
                 <use href="./sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
         </ul>
     </div>
